--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+#Configura??o do Thymeleaf
 
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.cache=false
+
+#Configura??o do banco de dados
+Spring.datasource.url=jdbc:mysql://localhost:3306/anotations
+Spring.datasource.username=root
+Spring.datasource.password=56405266885
+Spring.jpa.hibernate.ddl_auto=update
